--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
                 }]
             });
+
+            function add_person(){
+                alert("telo");
+            }
+
+            function reload_table(){
+                alert("Wedus");
+            }
         });
     </script>
 </body>
