--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
         <h1 style="font-size:20pt">Azure Web Dicoding</h1>
         <br />
-        <button class="btn btn-success" onclick="add_person()"><i class="glyphicon glyphicon-plus"></i> Add Person</button>
-        <button class="btn btn-default" onclick="reload_table()"><i class="glyphicon glyphicon-refresh"></i> Reload</button>
+        <button class="btn btn-success" href="javascript:void(0)" onclick="add_person()"><i class="glyphicon glyphicon-plus"></i> Add Person</button>
+        <button class="btn btn-default" href="javascript:void(0)" onclick="reload_table()"><i class="glyphicon glyphicon-refresh"></i> Reload</button>
         <br />
         <br />
         <table class="table table-striped table-bordered tperson" cellspacing="0" width="100%">
@@ -73,7 +73,7 @@
                 },{
                     title: "Action",
                     target: 5,
-                    
+
                 }]
             });
 
